--- a/index.html
+++ b/index.html
@@ -2,15 +2,14 @@
 <html>
 
 <head>
-    <link rel="stylesheet" href="style.css">
-    <title>hi...</title>
-
-    <img class="header-image" src="images/utilityPoles.jpg" alt="utility poles">
+    <link rel="stylesheet" href="index.css">
+    <title>Designer Tools</title>
 </head>
 
 <body>
-<h1>Distribution Designer Tools</h1>
-<div id="container"> 
+    <h1>Distribution Designer Tools</h1>
+    <img class="header-image" src="images/utilityPoles.jpg" alt="utility poles">
+    <div id="container"> 
     <ul class="buttons">
         <button id="feetToInches">Feet to Inches Converter</button>
         <button id="poleAudit">Pole Audit</button>
@@ -33,5 +32,5 @@
 </footer>
 
 
-<script src="script.js"></script>
+<script src="index.js"></script>
 </html>
