updated css for buttons, added resource links

--- a/index.html
+++ b/index.html
@@ -10,25 +10,39 @@
     <h1>Distribution Designer Tools</h1>
     <img class="header-image" src="images/utilityPoles.jpg" alt="utility poles">
     <div id="container"> 
-    <ul class="buttons">
-        <button id="feetToInches">Feet to Inches Converter</button>
-        <button id="poleAudit">Pole Audit</button>
-        <button id="generate">Generate</button>
-    </ul>
-</div>
+        <ul class="buttons">
+            <button id="feetToInches">Feet to Inches Converter</button>
+            <button id="poleAudit">Pole Audit</button>
+            <button id="generate">Generate</button>
+        </ul>
+    </div>
 
-<div id="workspace">
+    <div id="workspace">
 
-<!-- Tools get displayed here -->
+        <!-- Tools get displayed here -->
 
-</div>
+    </div>
 
+    <div class="links">
+        <h3>Engineering Resources</h3>
+        <ul>
+            <li>
+                <a href="https://www.latex-project.org">Latex</a>
+            </li>
+            <li>
+                <a href="https://www.wolframalpha.com">Wolfram Alpha</a>
+            </li>
+            <li>
+                <a href="https://smartsheet-platform.github.io/api-docs/">Smartsheet Documentation</a>
+            </li>
+        </ul>
+    </div>
 </body>
 
 
 
 <footer id="footer">
-    <p>&copy; 2020 brendandeforest.com</p>
+    <small>Built by <a href="http://www.twitter.com/brendandeforest">Brendan DeForest</a>
 </footer>
 
 
