Updated css to make site mobile firste.

--- a/index.html
+++ b/index.html
@@ -7,8 +7,11 @@
 </head>
 
 <body>
-    <h1>Distribution Designer Tools</h1>
-    <img class="header-image" src="images/utilityPoles.jpg" alt="utility poles">
+    <div id="header">
+	    <small>Built by <a href="https://twitter.com/brendandeforest">Brendan DeForest</a></small>
+        <h1>Distribution Designer Tools</h1>
+        <img class="header-image center" src="images/utilityPoles.jpg" alt="utility poles">
+    </div>
     <div id="container"> 
         <ul class="buttons">
             <button id="feetToInches">Feet to Inches Converter</button>
