minor css changes

--- a/index.html
+++ b/index.html
@@ -16,19 +16,23 @@
     <div id="container"> 
     <div id="workspace">
         <div id="calcSpace">
-        <h3>Attachment Calculator</h3>
+        <h4>Find the attachment separation between two cables</h4>
         <form id="calc">
-          <label>Top Attachment</label>
           <div>
-            <input type="number" id="a_ft" placeholder="feet">
-            <input type="number" id="a_in" placeholder="inches">
+            <label>Top Attachment</label>
+            <div>
+              <input type="number" id="a_ft" placeholder="feet"><label> ft</label>
+              <br>
+              <input type="number" id="a_in" placeholder="inches"><label> in</label>
+            </div>
           </div>
-            <br>
-            <label>Bottom Attachment</label>
-            <br>
           <div>
-            <input type="number" id="b_ft" placeholder="feet">
-            <input type="number" id="b_in" placeholder="inches">
+            <label>Bottom Attachment</label>
+            <div>
+              <input type="number" id="b_ft" placeholder="feet"><label> ft</label>
+              <br>
+              <input type="number" id="b_in" placeholder="inches"><label> in</label>
+            </div>
           </div>
           <div>
             <!-- Drop Down Menu add/subtract -->
