Updated calc to add or subtract attachment heights

--- a/index.html
+++ b/index.html
@@ -18,6 +18,13 @@
         <div id="calcSpace">
         <h4>Find the attachment separation between two cables</h4>
         <form id="calc">
+          <label for="operation">Choose operation:</label>
+          <br>
+          <select id="operation">
+            <option value="Subtract">Subtract</option>
+            <option value="Add">Add</option>
+          </select>
+          <br><br>
           <div>
             <label>Top Attachment</label>
             <div>
@@ -26,6 +33,7 @@
               <input type="number" id="a_in" placeholder="inches"><label> in</label>
             </div>
           </div>
+          <br>
           <div>
             <label>Bottom Attachment</label>
             <div>
