Added Dark Mode

--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
         </ul>
     </div>
     </div>
+    <button type=submit id="dark" onclick="darkMode()">Toggle Dark Mode</button    >
 </body>
 
 <script src="index.js"></script>
