Fixed closing div tag

--- a/index.html
+++ b/index.html
@@ -49,7 +49,6 @@
         <div id="calcResults" class="results"></div>
           <!-- Result will display here -->
       </div>
-    </div>
 
     <div id="calcAGL" class="tools">
       <h3>AGL Calculator</h3>
@@ -71,7 +70,7 @@
         <!-- Special notes to user will display here -->
       </div>
     </div>
-
+  </div> <!-- /workspace -->
     <div class="links">
         <h3>Engineering Resources</h3>
         <ul>
