--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
 
     <div id="calcAGL" class="tools">
       <h3>AGL Calculator</h3>
+      <p>Leave setting depth blank to use standard setting depth.</p>
       <form>
         <label>Size of Pole</label>
         <br>
@@ -59,7 +60,7 @@
         <br>
         <label>Setting Depth</label>
         <br>
-        <input type="number" id="setDepth" placeholder = "Setting Depth"><small>Leave blank to use standard setting depth.</small>
+        <input type="number" id="setDepth" placeholder = "Setting Depth">
         <br>
         <Button type="submit" onclick="runGetAGL()">Submit</button>
       </form>
@@ -72,19 +73,19 @@
     </div>
   </div> <!-- /workspace -->
     <div class="links">
-        <h3>Engineering Resources</h3>
+       <h3>Engineering Resources</h3>
         <ul>
-            <li>
-                <a href="https://www.latex-project.org">Latex</a>
-            </li>
-            <li>
-                <a href="https://www.wolframalpha.com">Wolfram Alpha</a>
-            </li>
-            <li>
-                <a href="https://smartsheet-platform.github.io/api-docs/">Smartsheet Documentation</a>
-            </li>
+          <li>
+              <a href="https://www.latex-project.org">Latex</a>
+          </li>
+          <li>
+              <a href="https://www.wolframalpha.com">Wolfram Alpha</a>
+          </li>
+          <li>
+              <a href="https://smartsheet-platform.github.io/api-docs/">Smartsheet Documentation</a>
+          </li>
         </ul>
-    </div>
+      </div>
     </div>
     <button type=submit id="dark" onclick="darkMode()">Toggle Dark Mode</button    >
 </body>
